src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-dwU-dhF500-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\ndefault column width: U\ndefault window height: F500\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 0 × 500, bounds: 1248 × 688, states: []
size: 1 × 500, bounds: 1248 × 688, states: [Activated]
